--- a/index.html
+++ b/index.html
@@ -521,9 +521,9 @@ button:hover {
 <center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1707419,"Users","ffffff");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
 </center>
 <!-- END: Powered by Supercounters.com -->
-              <center><font color="black"><span style="font-weight:bold;">Ikani pansipa.<font><center/><span/><br/>
+              <center><font color="black"><span style="font-weight:bold;">Ikani pansipa.<font><center/><span/>
        <hr color="black"width="100%" />
-         <br/>
+         
          <center><p class="title"><font color="black">Ndiwe mwamuna kapena mkazi?</font></p></center>
           <center>
 <select aria-label="الجنس" name="birthday_year" id="year" title="الجنس" class="_5dba" style="
